fixes #1381 menu hidden by hamburger but clicking not revealing

--- a/app/assets/stylesheets/home/_header.sass
+++ b/app/assets/stylesheets/home/_header.sass
@@ -44,11 +44,13 @@ body
         text-transform: none
         letter-spacing: 0
     +for-tablet-portrait-up
-      display: none
+      &.is-hidden
+        display: none
       ul
         padding-top: 0.5rem
     +for-tablet-landscape-up
-      display: block
+      &.is-hidden
+        display: block
       ul
         margin-right: 1.5rem
       li
